--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  font-family: var(--font-conthrax);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,5 +18,9 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-conthrax);
+}
+
+html {
+  scroll-behavior: smooth;
 }
