--- a/app/globals.css
+++ b/app/globals.css
@@ -409,6 +409,14 @@ button {
     mask-position: center;
     mask-size: 100% 100%;
   }
+
+  .slider-item {
+    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    width: 100% !important;
+    outline: none;
+  }
 }
 
 /* ---------------------------------------------------------------------------
